<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:text="@string/kelilinglayanglayang"
        android:paddingBottom="16dp"/>

    <!--sisi a-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sisi"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idsisi1"
        android:inputType="numberDecimal"
        android:lines="1"/>
    <!--sisi b-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sisi2"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idsisi2"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        android:id="@+id/idhitung"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idhasil"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:text="@string/hasil"/>
</LinearLayout>